# Anki-Card-Field-Adjuster

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  package-lock.json  package.json  updates
src/: edits.rs  index.html  main.js  main.rs  requests.rs  responses.rs  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: edits.rs  main.rs  requests.rs  responses.rs
