[package]
name = "anki-card-fields-adjuster"
version = "1.0.1"
description = "A simple Anki Card field editor"
authors = ["MrDulfin"]
license = "AGPL"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
dioxus = "0.4.3"
dioxus-desktop = "0.4.3"
dioxus-helmet = "0.2.3"
fermi = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["std"] }
tokio = { version = "1.34.0", features = ["full"] }
reqwest = { version = "0.11.22", features = ["json"] }
itertools = { version = "0.12.0", features = ["use_std", "use_alloc"] }
log = "0.4.20"
